--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   - title: facebook
     url: https://www.facebook.com/emjoyart/
   - title: instagram
-    url: https://www.instagram.com/emjoyart/
+    url: https://www.instagram.com/emjoyberkley/
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
