--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ contact: static
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
+  primary: 12a589 #80B3FF
+  primary-light: 5ad7b9 #80B3FF
+  primary-rgb: "18, 165, 137" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
 
