--- a/_config.yml
+++ b/_config.yml
@@ -37,9 +37,9 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: facebook
-    url: https://www.facebook.com/emjoyart/
+    url: https://www.facebook.com/emjoycreates/
   - title: instagram
-    url: https://www.instagram.com/emjoyberkley/
+    url: https://www.instagram.com/emjoycreates/
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
